<resources>
    <string name="app_name">SQLBooks</string>
    <string name="empty_view_title_text">It looks a bit barren here...</string>
    <string name="empty_view_subtitle_text">Add a product, click the + icon.</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="toast_insert_failed">Product Addition Failed.</string>
    <string name="toast_insert_success">Product Successfully Added.</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="usd_sign">$</string>
    <string name="quantity">Quantity:&#160;</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_price">Price (USD)</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_email">Supplier Email</string>
    <string name="hint_supplier_phone">Supplier Phone</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="toast_product_saved">Product Saved</string>
    <string name="toast_product_edit">Product Edited Successfully</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_product_failed">Error with deleting product</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="all_fields_toast">All fields must be filled.</string>
    <string name="product_details">Product Details</string>
    <string name="quantity_plus">Quantity +</string>
    <string name="quantity_minus">Quantity -</string>
    <string name="supplier_details">Supplier Details</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="email_supplier">Email Supplier</string>
</resources>
