<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Product Details"
            style="@style/CategoryStyle" />
        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                android:imeOptions="actionDone"/>

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle"
                android:imeOptions="actionDone"/>
            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle"
                android:imeOptions="actionDone"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Supplier Details"
            style="@style/CategoryStyle" />
        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical"
            android:imeOptions="actionDone">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_supplier_email"
                android:hint="@string/hint_supplier_email"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                android:imeOptions="actionDone"/>
            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/hint_supplier_phone"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle"
                android:imeOptions="actionDone"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/increase_quantity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp"
        android:text="Increase Quantity (+1)" />

    <Button
        android:id="@+id/decrease_quantity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp"
        android:text="Decrease Quantity (-1)" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp"
        android:text="Call Supplier" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp"
        android:text="Email Supplier"/>

</LinearLayout>
